base/app-jellyfin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
spec:
  rules:
  - host: kube-jellyfin.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: jellyfin
---
apiVersion: v1
kind: Service
metadata:
    name: jellyfin
spec:
    ports:
      - name: jellyfin
        port: 8096
        targetPort: 8096
    selector:
        app: jellyfin
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  serviceName: "jellyfin"
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1978
        runAsGroup: 1978
        fsGroup: 1978
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8096
          name: jellyfin
        volumeMounts:
        - name: config
          mountPath: /config
          subPath: jellyfin/config
        - name: config
          mountPath: /cache
          subPath: jellyfin/cache
        - name: media
          mountPath: /media
#      imagePullSecrets:
#        - name: docker-hub
      volumes:
        - name: config
          persistentVolumeClaim:
           claimName: nfs
#        - name: cache
#          persistentVolumeClaim:
#           claimName: nfs
        - name: media
          nfs:
            server: 192.168.68.150
            path: /oricopool-1/media
            readOnly: true
